src/corelib/itemmodels/qabstractitemmodel.h
@@ -242,6 +242,8 @@ public:
 private:
     QPersistentModelIndexData *d;
     friend size_t qHash(const QPersistentModelIndex &, size_t seed) noexcept;
+    friend bool qHashEquals(const QPersistentModelIndex &a, const QPersistentModelIndex &b) noexcept
+    { return a.d == b.d; }
 #ifndef QT_NO_DEBUG_STREAM
     friend Q_CORE_EXPORT QDebug operator<<(QDebug, const QPersistentModelIndex &);
 #endif
